is_first_pickとbanned_pokemonsの項目を追加
